manifests/customers.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: customers
  labels:
    app: customers
spec:
  revisionHistoryLimit: 3
  replicas: 5
  selector:
    matchLabels:
      app: customers
  template:
    metadata:
      labels:
        version: v1
        app: customers
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: 6255/customer-info:customers-b0b3a01af12ec6c2a4b5e3559b5cc479d0e2f401
          imagePullPolicy: Always
          name: svc
          ports:
            - containerPort: 3000
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: customers-vs
            routes:
              - default
          destinationRule:
            name: customers-dr
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
        - setWeight: 10
        - pause:
            duration: 1m
        - setWeight: 30
        - pause:
            duration: 1m
        - setWeight: 50
        - pause:
            duration: 1m
