manifests/web-frontend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: web-frontend
  labels:
    app: web-frontend
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      app: web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
        version: v1
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: 6255/customer-info:web-frontend-783157e89108fb6205b7a77920a7b44573a3e8aa
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 8080
  strategy:
    canary:
      steps:
      - setWeight: 50
      - pause:
          duration: 1m
