manifests/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-gateway
spec:
  selector:
     istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP
    hosts: 
      - "*"
