manifests/web-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webfrontend-vs
spec:
  hosts:
    - "*"
  gateways:
    - web-gateway
  http:
    - name: default
      match:
        - uri:
           prefix: /
      route:
         - destination:
             host: web-frontend
